<resources>
    <string name="app_name">Chess Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bullet">Bullet</string>
    <string name="blitz">Blitz</string>
    <string name="rapid">Rapid</string>
    <string name="custom">Custom</string>
    <string name="initial_time">Initial Time</string>
    <string name="_1_min">1 min</string>
    <string name="_0_sec">0 sec</string>
    <string name="bonus_time">Bonus Time</string>
    <string name="user_preference">PREFERENCES</string>
</resources>